--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@ footer {
   #menu p {
     text-align: center;
   }
+
+  footer p,
+  #title-footer {
+    font-size: 0.7em;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
